added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h1 style="text-align: center;">My First Website</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel sint ad eligendi similique tenetur magnam quas. Praesentium nesciunt, laborum veniam expedita adipisci nostrum corrupti est, amet quae inventore debitis accusantium?Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti repellat itaque sit reiciendis consequatur consequuntur est velit explicabo inventore veniam libero qui eius quidem vero, perferendis repellendus doloribus iusto esse Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatum vero, repellat magnam aspernatur animi commodi laboriosam dolore officia eaque recusandae maxime possimus, odio nostrum voluptas non, perferendis assumenda dicta esse!</p>
+    </div>
 </body>
 </html>
